--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,6 +2,14 @@ body {
     background-color: lightskyblue;
 }
 
+.jumbotron {
+    text-align: center;
+    background-color: #99b3ff;
+    color: black;
+    border-radius: 0;
+    border-bottom: 10px solid black;
+  }
+  
 /* li {
     background-color: lightskyblue;
     margin-bottom: 10px;
