--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgercode.js"></script>
 
-		<title>Eat Da Burger</title>
+		<title>Feed Harvey</title>
 		
 	</head>
 
