--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,19 @@
   <p class="lead">This is Harvey</p>
   <h3 class="display-6">Harvey is Hungry</h2>
   <h1 class="display-2">Feed Harvey</h1>
+{{!-- 
+    <form class="">
+
+        <div class="form-group">
+
+          <textarea type="text" id="food" rows="2"></textarea>
+        
+        </div>
+
+      </form>
+
+      <button class="" type="button">Add food</button> --}}
+        
   
 </div>
 
@@ -15,18 +28,7 @@
 
       {{!-- <h3>Add food for Harvey:</h3> --}}
           
-      <form class="">
-
-        <div class="form-group">
-
-          <textarea type="text" id="food" rows="2"></textarea>
-        
-        </div>
-
-      </form>
-
-      <button class="btn btn-info" type="button">Add food</button>
-        
+    
     </div>
       
   </div>
@@ -36,7 +38,7 @@
 
     {{!-- Col Not-Devoured --}}
 
-        <div class="col-4">
+        <div class="col-sm-4 col-md-4 col-lg-4">
           {{!-- add list of items that have not been devoured here --}}
           {{!-- when a database item devoured is marked as false, goes in this space --}}
 
@@ -47,7 +49,8 @@
             {{#each burgersObj }}
             {{#unless devoured}}
 
-            <li>{{ burger_name }}</li>
+            <li><span>{{ food_name }}</span>
+            <button class="feed-harvey">Feed Harvey</button></li>
 
              {{/unless}}
 
@@ -62,7 +65,7 @@
       
       {{!-- https://happydorid.tumblr.com/post/148484344109/plant-friend --}}
 
-      <div class="col-4">
+      <div class="col-sm-4 col-md-4 col-lg-4">
 
         <img id="harvey" src="/assets/images/harvey.jpg">
 
@@ -71,7 +74,7 @@
 
         {{!-- Col Devoured --}}
 
-        <div class="col-4">
+        <div class="col-sm-4 col-md-4 col-lg-4">
 
           {{!-- add list of items that have not been devoured here --}}
           {{!-- when a database item devoured is marked as false, goes in this space --}}
@@ -82,7 +85,7 @@
             {{!-- Use each to display every item in the [insertname] array --}}
             {{#each burgersObj }}
               {{#if devoured}}
-                <li>{{ burger_name }}</li>
+                <li>{{ food_name }}</li>
               {{/if}}
             {{/each}}
 
