--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,20 +7,14 @@
 
   <div id="forminput" class="justify-content-center">
     
-    <form class="form input">
-
-        {{!-- <div class="form-group">
-
-          <textarea type="text" id="food" rows="2"></textarea>
-        
-        </div> --}}
+    <form class="create-form">
 
         <div class="input-group">
           
-          <input class="form-control">
+          <input id="addfeed" class="form-control">
 
           <span class="input-group-btn">
-              <button class="btn btn-info" type="button">Add to Feed</button>
+              <button class="btn btn-info" id="add" type="submit">Add to Feed</button>
           </span>
         </div>
 
@@ -59,11 +53,11 @@
 
           <ol>
             {{!-- Use each to display every item in the [insertname] array --}}
-            {{#each burgersObj }}
+            {{#each foodObj }}
             {{#unless devoured}}
 
             <li><span>{{ food_name }}</span>
-            <button class="feed-harvey">Feed Harvey</button></li>
+            <button data-id="{{id}}" class="feed-harvey">Feed Harvey</button></li>
 
              {{/unless}}
 
@@ -96,7 +90,7 @@
 
           <ol>
             {{!-- Use each to display every item in the [insertname] array --}}
-            {{#each burgersObj }}
+            {{#each foodObj }}
               {{#if devoured}}
                 <li>{{ food_name }}</li>
               {{/if}}
