updated harvey img, set size based on food eaten, add imgSize var to index

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: lightskyblue;
 }
 
+
 .jumbotron {
     text-align: center;
     background-color: #8FBC8F;
@@ -25,8 +26,8 @@ body {
 
   #harvey {
     display: block;
-    width: 100px;
-    height: 100px;
+    /* width: 100px;
+    height: 100px; */
     margin: auto;
   }
 
