--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -72,7 +72,7 @@
 
       <div class="col-sm-4 col-md-4 col-lg-4">
 
-        <img id="harvey" src="/assets/images/harvey.jpg">
+        <img id="harvey" src="/assets/images/harvey.jpg" height={{imgSize}} width={{imgSize}}>
 
       </div>
 
