updates screenshots, minor updates to index, connection js, hide unused code in script

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,8 +12,10 @@
 
   <div class="row mx-auto">
 
-    <div class="col col-submit">
-
+    <div class="col col-open">
+      
+      {{!-- <span class="feedme">Feed Me!</span> --}}
+        
     </div>
       
   </div>
@@ -70,9 +72,13 @@
       
     {{!-- https://happydorid.tumblr.com/post/148484344109/plant-friend --}}
 
-      <div class="col-sm-4 col-md-4 col-lg-4">
+      <div class="col-sm-4 col-md-4 col-lg-4 col-harvey-img align-content-center">
+
+        {{!-- <p class="feedme">Feed Me!</p> --}}
 
         <img id="harvey" src="/assets/images/harvey.jpg" height={{imgSize}} width={{imgSize}}>
+
+        {{!-- <p class="feedme">Feed Me!</p> --}}
 
       </div>
 
@@ -106,3 +112,4 @@
 
 {{!-- end container --}}
 </div>
+
