--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,21 +13,16 @@ body {
     padding-top: 2rem;
   }
 
-  /* textarea {
-    width: 300px;
-    height: 150px;
-  } */
 
   .col-submit {
     display: flex;
-    margin: auto;
+    margin: 30px;
+    padding: 80px;
     text-align: center;
   }
 
   #harvey {
     display: block;
-    /* width: 100px;
-    height: 100px; */
     margin: auto;
   }
 
@@ -40,12 +35,5 @@ body {
     padding: 0px;
     margin: 0px;
   }
-  
-  
-/* li {
-    background-color: lightskyblue;
-    margin-bottom: 10px;
-    padding: 10px;
-    width: 50%;
-    font-family: sans-serif;
-  } */
+
+
