--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,7 +66,7 @@
 
         {{!-- <p class="feedme">Feed Me!</p> --}}
 
-        <img id="harvey" src="/assets/images/harvey.jpg" height={{imgSize}} width={{imgSize}} alt="Harvey Plant Image">
+        <img id="harvey" class="img-responsive" src="/assets/images/harvey.jpg" height={{imgSize}} width={{imgSize}} alt="Harvey Plant Image">
 
         <p id="feedme">Feed Me!</p>
 
